# fintracker

./: .gitignore  CONTRIBUTING.md  README.md  app.py  pyproject.toml
config/: sample.yaml
fintracker/: config.py  models.py  mortgage.py  projections.py  strategies.py  tax_engine.py
tests/: conftest.py  test_accounting.py  test_config.py  test_mortgage.py  test_new_features.py  test_projections.py  test_strategies.py  test_tax_engine.py
