[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fintracker"
version = "0.1.0"
description = "Personal long-term financial planning engine with tax-aware projections, Monte Carlo simulation, and scenario comparison."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["finance", "retirement", "tax", "planning", "streamlit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Office/Business :: Financial",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "streamlit>=1.35",
    "pandas>=2.1",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "plotly>=5.20",
    "scipy>=1.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
fintracker = "fintracker.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["fintracker*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"